--- a/platformio.ini
+++ b/platformio.ini
@@ -13,17 +13,15 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = STM32G0B1RE_btt
 include_dir  = Marlin
 extra_configs =
-    Marlin/config.ini
     ini/avr.ini
     ini/due.ini
     ini/esp32.ini
     ini/features.ini
     ini/lpc176x.ini
     ini/native.ini
-    ini/samd21.ini
     ini/samd51.ini
     ini/stm32-common.ini
     ini/stm32f0.ini
@@ -46,13 +44,12 @@ extra_configs =
 build_flags        = -g3 -D__MARLIN_FIRMWARE__ -DNDEBUG
                      -fmax-errors=5
 extra_scripts      =
-  pre:buildroot/share/PlatformIO/scripts/configuration.py
   pre:buildroot/share/PlatformIO/scripts/common-dependencies.py
   pre:buildroot/share/PlatformIO/scripts/common-cxxflags.py
   pre:buildroot/share/PlatformIO/scripts/preflight-checks.py
   post:buildroot/share/PlatformIO/scripts/common-dependencies-post.py
 lib_deps           =
-default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared> -<src/tests>
+default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
   -<src/lcd/HD44780> -<src/lcd/TFTGLCD> -<src/lcd/dogm> -<src/lcd/tft> -<src/lcd/tft_io>
   -<src/HAL/STM32/tft> -<src/HAL/STM32F1/tft>
   -<src/lcd/e3v2/common> -<src/lcd/e3v2/creality> -<src/lcd/e3v2/proui> -<src/lcd/e3v2/jyersui> -<src/lcd/e3v2/marlinui>
@@ -89,7 +86,6 @@ default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared> -<src/t
   -<src/lcd/extui/malyan>
   -<src/lcd/extui/mks_ui>
   -<src/lcd/extui/nextion>
-  -<src/lcd/extui/ia_creality>
   -<src/lcd/lcdprint.cpp>
   -<src/lcd/touch/touch_buttons.cpp>
   -<src/sd/usb_flashdrive/lib-uhs2> -<src/sd/usb_flashdrive/lib-uhs3>
@@ -105,7 +101,6 @@ default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared> -<src/t
   -<src/feature/backlash.cpp>
   -<src/feature/baricuda.cpp> -<src/gcode/feature/baricuda>
   -<src/feature/bedlevel/abl> -<src/gcode/bedlevel/abl>
-  -<src/feature/bedlevel/bdl> -<src/gcode/probe/M102.cpp>
   -<src/feature/bedlevel/mbl> -<src/gcode/bedlevel/mbl>
   -<src/feature/bedlevel/ubl> -<src/gcode/bedlevel/ubl>
   -<src/feature/bedlevel/hilbert_curve.cpp>
@@ -194,7 +189,6 @@ default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared> -<src/t
   -<src/gcode/feature/advance>
   -<src/gcode/feature/camera>
   -<src/gcode/feature/i2c>
-  -<src/gcode/feature/input_shaping>
   -<src/gcode/feature/L6470>
   -<src/gcode/feature/leds/M150.cpp>
   -<src/gcode/feature/leds/M7219.cpp>
@@ -276,7 +270,7 @@ lib_deps          = ${common.lib_deps}
 monitor_speed     = 250000
 monitor_eol       = LF
 monitor_echo      = yes
-monitor_filters   = colorize, time, send_on_enter
+monitor_filters   = colorize, time, send_on_enter, log2file
 
 #
 # Just print the dependency tree
